--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -10,11 +10,11 @@
     border: 2px dashed rgb(137, 72, 199);
 }
 
-.dark-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+.work-btn {
+    width: 25%;
+    border-radius: 0;
+}
+
+.intro-content {
+    padding-bottom: 140px;
+}
