--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -1,8 +1,27 @@
-.intro {
-    background-image: url('../../images/laptop.jpg');
+/* .intro {
+    background: url('../../images/laptop.jpg') center center no-repeat;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+} */
+
+.intro {
+    position: relative;
+    background: url('../../images/laptop.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  }
+
+  .dark-overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
 .profile-img {
     width: 300px;
