--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,6 @@
 .projects {
-    border-top: 2px dashed black;
+    border-top: 1px dashed #6C5CE7;
+    background-image: url('../../images/hexagon.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
