--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -38,3 +38,24 @@
 .intro-content {
     padding-bottom: 140px;
 }
+
+.button_2 {
+    background-color: rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
+    color: rgb(95,39,205);
+    cursor: pointer;
+    border: 2px solid rgb(95,39,205);
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  
+  .button_2:hover {
+    background-color: rgb(95,39,205);
+    color: #fff;
+    text-decoration: none;
+  }
