--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,6 +1,4 @@
 .projects {
-    border-top: 1px dashed #6C5CE7;
-    background-image: url('../../images/hexagon.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url('../../images/Zig-Zag.svg');
+    background-size: 20% 20%;
 }
