--- a/src/components/Activites/Activites.css
+++ b/src/components/Activites/Activites.css
@@ -1,8 +1,6 @@
 .activites {
-    border-top: 1px dashed #6C5CE7;
-    background: url('../../images/hexagon.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: url('../../images/Zig-Zag.svg');
+    background-size: 20% 20%;
 }
 
 .activity-slide {
