--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,3 +1,5 @@
 .experience {
-    border-top: 1px dashed #6C5CE7;
+    border-top: 1px dashed #6C5CE7;  
+    background-image: url('../../images/Zig-Zag.svg');
+    background-size: 20% 20%;
 }
