--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,10 +1,9 @@
 .edu-image {
     width: 100%;
     height: 250px;
-    border: 2px solid #6C5CE7;
+    box-shadow: 0px 10px 13px -7px #000000;
 }
 
 .education {
-    background-image: url('../../images/Sun-Tornado.svg');
-    background-size: cover;
+    background-color: #f2f2f2;
 }
