--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,5 +1,4 @@
 .experience {
-    border-top: 1px dashed #6C5CE7;  
-    background-image: url('../../images/Zig-Zag.svg');
-    background-size: 20% 20%;
+    background-image: url('../../images/Subtle-Prism.svg');
+    background-size: cover;
 }
