--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,4 +1,4 @@
 .skills {
-    border-top: 1px dashed #6C5CE7;
-    border-bottom: 1px dashed #6C5CE7;
+    border-top: 2px solid #6C5CE7;
+    border-bottom: 2px solid #6C5CE7;
 }
