--- a/src/components/Activites/Activites.css
+++ b/src/components/Activites/Activites.css
@@ -22,3 +22,9 @@
 .activity-desc p {
     font-size: 18px;
 }
+
+@media(max-width: 992px) {
+    .activites {
+        background-size: cover;
+    }
+}
