--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,3 +2,9 @@
     background-image: url('../../images/Zig-Zag.svg');
     background-size: 20% 20%;
 }
+
+@media(max-width: 992px) {
+    .projects {
+        background-size: cover;
+    }
+}
